<?xml version="1.0" encoding="utf-8"?>
<com.pan.simplepicture.widget.scrollview.OverScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_page" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingBottom="100dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="设置"
            android:textColor="@color/actionbar_color_2" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_item_bg"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/setting_item_up_bg_selector"
                    android:text="自动播放"
                    android:textColor="@color/actionbar_color_2"
                    android:textSize="15sp" />

                <ToggleButton
                    android:id="@+id/auto_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:button="@drawable/selector_toggle_button"
                    android:tag="auto_play" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="#33000000" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/setting_item_up_bg_selector"
                    android:text="非WIFI环境下播放提示"
                    android:textColor="@color/actionbar_color_2"
                    android:textSize="15sp" />

                <ToggleButton
                    android:id="@+id/prompt__not_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:button="@drawable/selector_toggle_button"
                    android:tag="prompt__not_wifi" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="#33000000" />

            <TextView
                android:id="@+id/clear_cache"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bottom_bg_selector"
                android:drawableRight="@drawable/ic_ab_back_holo_light"
                android:padding="15dp"
                android:text="清除缓存"
                android:textColor="@color/actionbar_color_2"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="互动"
            android:textColor="@color/actionbar_color_2" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_item_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/remmend_firend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_up_bg_selector"
                android:drawableRight="@drawable/ic_ab_back_holo_light"
                android:padding="15dp"
                android:text="推荐好友"
                android:textColor="@color/actionbar_color_2"
                android:textSize="15sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="#33000000" />

            <TextView
                android:id="@+id/assess"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_middle_bg_selector"
                android:drawableRight="@drawable/ic_ab_back_holo_light"
                android:padding="15dp"
                android:text="赏个好评"
                android:textColor="@color/actionbar_color_2"
                android:textSize="15sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="#33000000" />

            <TextView
                android:id="@+id/feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bottom_bg_selector"
                android:drawableRight="@drawable/ic_ab_back_holo_light"
                android:padding="15dp"
                android:text="意见反馈"
                android:textColor="@color/actionbar_color_2"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="关于我们"
            android:textColor="@color/actionbar_color_2" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_item_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_factory"
                    android:textColor="@color/actionbar_color_2"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_factory_web"
                    android:textColor="@color/actionbar_color_2"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="#33000000" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_email"
                    android:textColor="@color/actionbar_color_2"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_email_username"
                    android:textColor="@color/actionbar_color_2"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="#33000000" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_pay"
                    android:textColor="@color/actionbar_color_2"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_pay_username"
                    android:textColor="@color/actionbar_color_2"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/logout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_selector"
            android:text="退出登录"
            android:textColor="#fff"
            android:textSize="15sp" />
    </LinearLayout>

</com.pan.simplepicture.widget.scrollview.OverScrollView>